<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="Refresh"
        app:showAsAction="ifRoom" />

    <!-- Both only ever visible for a user-created podcast (see PodcastActivity). -->
    <item
        android:id="@+id/action_add_episodes"
        android:icon="@drawable/ic_add"
        android:title="@string/custom_add_episodes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_podcast"
        android:title="@string/custom_edit_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_queue"
        android:icon="@drawable/ic_queue"
        android:title="@string/action_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/action_downloads"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hide_played"
        android:title="Hide played episodes"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mark_all_played"
        android:title="Mark all as played"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mark_all_unplayed"
        android:title="Mark all as unplayed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unsubscribe"
        android:title="Unsubscribe"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_podcast"
        android:title="@string/custom_delete_podcast"
        app:showAsAction="never" />
</menu>
